--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My weather App</title>
+
+    <style>
+        h1{
+            text-align: center;
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
     <h1>
